--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>starter</title>
+    <title>Bootstrap Examples</title>
   </head>
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">Animated Dropdown</a>
+        <a class="navbar-brand" href="#">Bootstrap Examples</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -23,10 +23,10 @@
             </a>
               <!-- Here's the magic. Add the .animate and .slide-in classes to your .dropdown-menu and you're all set! -->
               <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="https://github.com/ChrisAchinga/bootstrap-examples">GitHub</a>
+                <a class="dropdown-item" href="https://github.com/ChrisAchinga/bootstrap-examples/issues">Issues</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
+                <a class="dropdown-item" href="CONTRIBUTING.md">Contributing</a>
               </div>
             </li>
           </ul>
@@ -39,11 +39,14 @@
         <div class="container text-center">
           <div class="row justify-content-center">
             <div class="col-md-7">
-              <h1 class="font-weight-light mt-4 text-white">Bootstrap Web Starter</p>
+              <h1 class="font-weight-light mt-4 text-white">Bootstrap Examples</p>
             </div>
           </div>
         </div>
       </div>
+      <section>
+
+      </section>
       <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
         <div class="container text-center">
           <small>Copyright &copy; Your Website</small>
